--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solana-dex-parser",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "Solana Dex Transaction Parser",
   "author": "cxcx",
   "license": "MIT",
@@ -14,7 +14,16 @@
     "parser",
     "swap",
     "transaction",
-    "blockchain"
+    "blockchain",
+    "liquidity",
+    "raydium",
+    "raydiumv4",
+    "jupiter",
+    "moonshot",
+    "meteora",
+    "orca",
+    "pumpfun",
+    "okx"
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
