--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "outDir": "./dist"
   },
   "include": ["src/**/*", "index.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
