--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solana-dex-parser",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "Solana Dex Transaction Parser",
   "author": "cxcx",
   "license": "MIT",
@@ -23,6 +23,7 @@
     "meteora",
     "orca",
     "pumpfun",
+    "pumpswap",
     "okx"
   ],
   "main": "dist/index.js",
