--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solana-dex-parser",
-  "version": "2.2.9",
+  "version": "2.3.0",
   "description": "Solana Dex Transaction Parser",
   "author": "cxcx",
   "license": "MIT",
@@ -18,6 +18,7 @@
     "liquidity",
     "raydium",
     "raydiumv4",
+    "raydium launchpad",
     "jupiter",
     "moonshot",
     "meteora",
@@ -44,9 +45,6 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.30.1",
-    "@coral-xyz/borsh": "^0.28.0",
-    "@solana/spl-token": "^0.4.12",
     "@solana/web3.js": "^1.87.0",
     "dotenv": "^16.4.7"
   },
