--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solana-dex-parser",
-  "version": "2.3.7",
+  "version": "2.3.8",
   "description": "Solana Dex Transaction Parser",
   "author": "cxcx",
   "license": "MIT",
@@ -25,6 +25,7 @@
     "orca",
     "pumpfun",
     "pumpswap",
+    "boopfun",
     "okx"
   ],
   "main": "dist/index.js",
